[package]
name = "kernel"
version = "0.1.0"
authors = ["Taemin Cha <krlrhkstk12@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33

[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
x86_64 = { version = "0.14.1-beta" }
